# formation_v.2

./: README.md  dummy.py
ai_det_v1/: CMakeLists.txt  package.xml  plugins.xml
ai_det_v1/launch/: ai_det_v1.launch
ai_det_v1/src/: AiDet.cpp
angle_synchroniser/: CMakeLists.txt  package.xml  plugins.xml
angle_synchroniser/launch/: angle_synchroniser.launch
angle_synchroniser/src/: AngleSync.cpp
blob_det_v2/: CMakeLists.txt  package.xml  plugins.xml
blob_det_v2/config/: default.yaml
blob_det_v2/launch/: blob_det_v2.launch  blob_det_v2_real.launch  blob_det_v2_sim.launch
blob_det_v2/src/: BlobDet.cpp
blobs_collector/: CMakeLists.txt  package.xml  plugins.xml
blobs_collector/launch/: blobs_collector.launch
blobs_collector/src/: BlobsCollectorNode.cpp
cameras_reader/: CMakeLists.txt  nodelet_plugins.xml  package.xml
cameras_reader/config/: cameras.yaml
cameras_reader/launch/: mynodelet.launch
cameras_reader/src/: CameraNode.cpp  NodeletClass.cpp
example_ros_vision/launch/: vision_example.launch
example_ros_vision/src/: EdgeDetect.cpp
fake_odometry/: CMakeLists.txt  package.xml  plugins.xml
fake_odometry/launch/: fake_odometry.launch
fake_odometry/src/: FakeOdometryNode.cpp
mode_commander/: CMakeLists.txt  package.xml  plugins.xml
mode_commander/launch/: mode_commander.launch  mode_commander_old.launch
mode_commander/src/: ModeCommanderNode.cpp
motion_optimiser_v2/: CMakeLists.txt  package.xml  plugins.xml
motion_optimiser_v2/config/: default.yaml  simulation.yaml
motion_optimiser_v2/launch/: motion_optimiser_no_gps.launch  motion_optimiser_v2.launch
motion_optimiser_v2/src/: Optimiser.cpp
orb_slam/: CMakeLists.txt  package.xml  plugins.xml
orb_slam/launch/: orb_slam.launch
orb_slam/src/: OrbSlam.cpp
sensor_fusion_v2/: CMakeLists.txt  package.xml  plugins.xml
sensor_fusion_v2/config/: default.yaml
sensor_fusion_v2/launch/: sensor_fusion_no_gps.launch  sensor_fusion_v2.launch
sensor_fusion_v2/src/: SensFuse.cpp
sync_blob_detector/: CMakeLists.txt  package.xml  plugins.xml
sync_blob_detector/launch/: sync_blob_det.launch
sync_blob_detector/src/: SyncBlobDet.cpp
synchronized_tmuxinator/: session.yml
tmux/: current_path.py  parser.py  session.yml
tmux/custom_configs/: uav_names.yaml
tmux/test_down_detection/: session.yml
tmux_no_gps/: parser2.py  parser3.py  tmux01.sh  tmux02.sh  tmux03.sh
tmux_real/: parser1.py  run_me.sh  tmux01.sh  tmux02.sh  tmux03.sh  tmux_commander.sh  world.yaml
tmux_real/connect/: session.yml
waypoint_flier/: CHANGELOG.rst  CMakeLists.txt  package.xml
waypoint_flier/config/: default.yaml
waypoint_flier/launch/: waypoint_flier.launch
waypoint_flier/src/: waypoint_flier.cpp
worlds/: grass_plane_color_boxes.world  grass_plane_color_boxes_test_1.world  grass_plane_color_boxes_test_2.world  grass_plane_color_boxes_test_3.world  grass_plane_color_boxes_test_4.world
(+13 files in other folders)
