<?xml version="1.0"?>
<package format="2">

  <name>blob_det_v2</name>
  <version>2.0.0</version>
  <description>BlobDet</description>

  <maintainer email="timauzakov@gmail.com">Timur Uzakov</maintainer>
  <author email="timauzakov@gmail.com">Timur Uzakov</author>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>message_filters</depend>
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>image_transport</depend>
  <depend>mrs_lib</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>image_geometry</depend>

  <export>
    <!-- The plugins.xml file defines nodelet as a plugin -->
    <nodelet plugin="${prefix}/plugins.xml" />
  </export>

</package>
